--- a/experience.html
+++ b/experience.html
@@ -27,7 +27,7 @@
             </header>
         </div>
         <header id="header" class="wrapper">
-            <div class="main">
+            <div class="main-flex">
                 <button class="nav-toggle" id="js-nav-toggle">
                     <span></span>
                     <span></span>
@@ -38,109 +38,126 @@
                         <li><a href="index.html">TOP<span>TOPページへ</span></a></li>
                         <li><a href="profile.html">Profile<span>プロフィール</span></a></li>
                         <li><a href="experience.html">Story<span>今までの経験</span></a></li>
+                        <li><a href="skill.html">Story<span>保有資格</span></a></li>
                         <li><a href="life.html">Future<span>人生設計</span></a></li>
                     </ul>
                 </nav>
             </div>
         </header>
-        <div class="main-colums">
-            <table>
-                <tr>
-                    <td><img src="img/1_Seitokai.jpg" width="450px" height="310px"></td>
-                    <th>
-                        <h2>生徒会活動：停滞していた校則改定を「行動力」で突破</h2>
-                        <br>
-                        <p>
-                            高校2年時、生徒会長として「スマホ使用禁止」の校則見直しに挑みました。 「先生側の不安（指導件数）」と「生徒の要望」の落とし所を模索し、「2か月で指導5件以下なら再検討」という条件を引き出しました。
-                            即座に生徒全員での見回りや放送での啓発活動を指揮。結果、条件をクリアし公約を実現しました。 「相手の懸念を理解し、行動で信頼を勝ち取る」。これが私のリーダーシップの原点です。
-                        </p>
-                    </th>
-                </tr>
-                <tr>
-                    <td><img src="img/2_Group.jpeg" width="450px" height="310px"></td>
-                    <th>
-                        <h2>グループ活動：SNS施策プロジェクトを成功に導いた、全員参加型のリーダーシップ</h2>
-                        <br>
-                        <p>
-                            【挑戦したこと】 「SNSのフォロワーを増やす施策」をテーマに、2か月で意見集約からスライド作成、発表準備まで完遂すること。<br>
-                            【取り組んだ工夫】 リーダーとして、ただ指示を出すのではなく、メンバー一人ひとりと密にコミュニケーションを実施。ToDoリストや月間スケジュールを可視化して共有することで、「誰が・何を・いつまでに」という目的意識を全員で揃えました。<br>
-                            【結果】 活動が進むにつれてチーム内の発言量が増え、最終的には先生やクラスメイトから高く評価される成果物を完成させることができました。
-                        </p>
-                    </th>
-                </tr>
-                <tr>
-                    <td><img src="img/8_Amamiku3.jpg" alt="違う画像に差し替えたい" width="450px" height="310px"></td>
-                    <th>
-                        <h2>アルバイト</h2>
-                        <br>
-                        <p>
-                            カフェのバイトとラーメン屋を掛け持ちしております。
-                            左にある写真は、カフェのバイトの賄いです。はんぺいの創作練り物を使った料理があるお店で、私はキッチンとして
-                            働いております。キッチンでバイトする中で、「相手の立場になって考える事」がよりできるようになりました。
-                            新人の方に、業務内容を教えるときに、相手がどこまで理解しているのか、今から何をしようとして分からずにいるのかを考え、サポートしてきました。
-                            その結果、入って６カ月になる子が、一人で仕事を完璧に遂行できるようになり、自身の指導に自信を持ちました。
-                        </p>
-                    </th>
-                </tr>
-                <tr>
-                    <td><img src="img/3_Proguraminngu.jpeg" width="450px" height="310px"></td>
-                    <th>
-                        <h2>ITスキル：継続的な学習による資格取得と、実務を見据えた開発スキルの習得</h2>
-                        <br>
-                        <p>
-                            私は、MOS Associateと基本情報技術者試験を専門学校での勉強を通じて取得しました。
-                            基本情報技術者試験は、3回受験をし、2回不合格となりましたが、めげずに勉強を続け、3回目で合格する事が叶いました。
-                            MOSは、実際の作業を通じて知識を身につけていきました。真っ新な所から、文書を書くという授業もあり、実務でも使える
-                            パソコンスキルを持っていると思います。また、専門学校では、プログラミングを学んでいます。
-                            言語は、HTML,CSS,JavaScriptです。一年生では、フロントエンドを、二年生ではバックエンドの言語を学んでいきます。
-                            一年生では、Webクリエイター能力試験を受験し、合格しました。自分で考えた事をコードに起こすという工程を通して、プログラミングを
-                            することが手強くなくなりました。
-                        </p>
-                    </th>
-                </tr>
-            </table>
-            <div id="top" class="wrapper">
-                <h1 class="profile">
-                    保有資格
-                </h1>
-                <ul class="product-list fadeIn">
-                            <li data-title="Webクリエイター能力試験" 
-                                data-text="" 
-                                data-img="#"> <a href="#">
-                                    <div class="item1">
-                                        <p>Webクリエイター能力試験</p>
-                                    </div>
-                                </a>
-                            </li>     
-                            <li data-title="MOS Associate" 
-                                data-text="高校二年生では、生徒会長を務め、自身が掲げた公約を実現する事ができました。
-                                            生徒会長を務める中で、スケジュール管理能力や、統率力、最後までやり切る力を身につける事ができました。" 
-                                data-img="img/1_Seitokai.jpg"> <a href="#">
-                                    <div class="item1">
-                                        <p>MOS Associate</p>
-                                    </div>
-                                </a>
-                            </li>     
-                            <li data-title="サービス介助士" 
-                                data-text="高校二年生では、生徒会長を務め、自身が掲げた公約を実現する事ができました。
-                                            生徒会長を務める中で、スケジュール管理能力や、統率力、最後までやり切る力を身につける事ができました。" 
-                                data-img="img/1_Seitokai.jpg"> <a href="#">
-                                    <div class="item1">
-                                        <p>サービス介助士</p>
-                                    </div>
-                                </a>
-                            </li>     
-                            <li data-title="基本情報技術者試験" 
-                                data-text="高校二年生では、生徒会長を務め、自身が掲げた公約を実現する事ができました。
-                                            生徒会長を務める中で、スケジュール管理能力や、統率力、最後までやり切る力を身につける事ができました。" 
-                                data-img="img/1_Seitokai.jpg"> <a href="#">
-                                    <div class="item1">
-                                        <p>基本情報技術者試験</p>
-                                    </div>
-                                </a>
-                            </li>     
-                </ul>
+        <div class="main-article">
+            <div class="main-flex">
+                <div class="divArea">
+                    <img src="img/1_Seitokai.jpg" id="student-council" style="width: 300px;">
+                    <img src="img/2_Group.jpeg" id="Group" style="width: 300px;">
+                    <img src="img/8_Amamiku1.jpg" id="part-time-job" style="width: 300px;">
+                    <img src="img/3_Proguraminngu.jpeg" id="about-skill" style="width: 300px;">
+                </div>
+                <div class="main-about">
+                    <h2>左の写真から気になる画像の上にカーソルを乗せてみてください</h2>
+                    <br>
+                    <p>私の過去の経験に関する詳細がこのエリアに表示されます！</p>
+                </div>
+            </div>
+            <div class="main-colums">
+                <div class="student-council">
+                    <h2>生徒会活動：停滞していた校則改定を「行動力」で突破</h2>
+                    <br>
+                    <p>
+                        高校2年時、生徒会長として「スマホ使用禁止」の校則見直しに挑みました。 「先生側の不安（指導件数）」と「生徒の要望」の落とし所を模索し、「2か月で指導5件以下なら再検討」という条件を引き出しました。
+                        即座に生徒全員での見回りや放送での啓発活動を指揮。結果、条件をクリアし公約を実現しました。 「相手の懸念を理解し、行動で信頼を勝ち取る」。これが私のリーダーシップの原点です。
+                    </p>
+                </div>
+                <div class="Group">
+                    <h2>グループ活動：SNS施策プロジェクトを成功に導いた、全員参加型のリーダーシップ</h2>
+                    <br>
+                    <p>
+                        【挑戦したこと】 「SNSのフォロワーを増やす施策」をテーマに、2か月で意見集約からスライド作成、発表準備まで完遂すること。<br>
+                        【取り組んだ工夫】 リーダーとして、ただ指示を出すのではなく、メンバー一人ひとりと密にコミュニケーションを実施。ToDoリストや月間スケジュールを可視化して共有することで、「誰が・何を・いつまでに」という目的意識を全員で揃えました。<br>
+                        【結果】 活動が進むにつれてチーム内の発言量が増え、最終的には先生やクラスメイトから高く評価される成果物を完成させることができました。
+                    </p>
+                </div>
+                <div class="part-time-job">
+                    <h2>アルバイト</h2>
+                    <br>
+                    <p>
+                        カフェのバイトとラーメン屋を掛け持ちしております。
+                        左にある写真は、カフェのバイトの賄いです。はんぺいの創作練り物を使った料理があるお店で、私はキッチンとして
+                        働いております。キッチンでバイトする中で、「相手の立場になって考える事」がよりできるようになりました。
+                        新人の方に、業務内容を教えるときに、相手がどこまで理解しているのか、今から何をしようとして分からずにいるのかを考え、サポートしてきました。
+                        その結果、入って６カ月になる子が、一人で仕事を完璧に遂行できるようになり、自身の指導に自信を持ちました。
+                    </p>
+                </div>
+                <div class="about-skill">
+                    <h2>ITスキル：継続的な学習による資格取得と、実務を見据えた開発スキルの習得</h2>
+                    <br>
+                    <p>
+                        私は、MOS Associateと基本情報技術者試験を専門学校での勉強を通じて取得しました。
+                        基本情報技術者試験は、3回受験をし、2回不合格となりましたが、めげずに勉強を続け、3回目で合格する事が叶いました。
+                        MOSは、実際の作業を通じて知識を身につけていきました。真っ新な所から、文書を書くという授業もあり、実務でも使える
+                        パソコンスキルを持っていると思います。また、専門学校では、プログラミングを学んでいます。
+                        言語は、HTML,CSS,JavaScriptです。一年生では、フロントエンドを、二年生ではバックエンドの言語を学んでいきます。
+                        一年生では、Webクリエイター能力試験を受験し、合格しました。自分で考えた事をコードに起こすという工程を通して、プログラミングを
+                        することが手強くなくなりました。
+                    </p>
+                </div>
+            </div>
+                <!-- <div id="top" class="wrapper">
+                    <h1 class="profile">
+                        保有資格
+                    </h1>
+                    <ul class="product-list fadeIn">
+                                <li data-title="Webクリエイター能力試験" 
+                                    data-text="" 
+                                    data-img="#"> <a href="#">
+                                        <div class="item1">
+                                            <p>Webクリエイター能力試験</p>
+                                        </div>
+                                    </a>
+                                </li>     
+                                <li data-title="MOS Associate" 
+                                    data-text="高校二年生では、生徒会長を務め、自身が掲げた公約を実現する事ができました。
+                                                生徒会長を務める中で、スケジュール管理能力や、統率力、最後までやり切る力を身につける事ができました。" 
+                                    data-img="img/1_Seitokai.jpg"> <a href="#">
+                                        <div class="item1">
+                                            <p>MOS Associate</p>
+                                        </div>
+                                    </a>
+                                </li>     
+                                <li data-title="サービス介助士" 
+                                    data-text="高校二年生では、生徒会長を務め、自身が掲げた公約を実現する事ができました。
+                                                生徒会長を務める中で、スケジュール管理能力や、統率力、最後までやり切る力を身につける事ができました。" 
+                                    data-img="img/1_Seitokai.jpg"> <a href="#">
+                                        <div class="item1">
+                                            <p>サービス介助士</p>
+                                        </div>
+                                    </a>
+                                </li>     
+                                <li data-title="基本情報技術者試験" 
+                                    data-text="高校二年生では、生徒会長を務め、自身が掲げた公約を実現する事ができました。
+                                                生徒会長を務める中で、スケジュール管理能力や、統率力、最後までやり切る力を身につける事ができました。" 
+                                    data-img="img/1_Seitokai.jpg"> <a href="#">
+                                        <div class="item1">
+                                            <p>基本情報技術者試験</p>
+                                        </div>
+                                    </a>
+                                </li>     
+                    </ul>
+                </div> -->
             </div>
         </div>
+        <footer id="footer" style="padding-top: 90px;" class="fadeIn">
+            <div class="footer-img">
+                <img src="img/footer-image.png" style="width: 120%; height: 400px">
+                <a href="contact.html" class="contact-button">お問い合わせはこちら</a>
+                <div class="nav-p">
+                    <ul>
+                        <li><a href="profile.html">プロフィール</a></li>
+                        <li><a href="experience.html">今までの経験</a></li>
+                        <li><a href="skill.html">保有資格</a></li>
+                        <li><a href="life.html">人生設計</a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
