--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                     <ul>
                         <li><a href="profile.html">Profile<span>プロフィール</span></a></li>
                         <li><a href="experience.html">Story<span>今までの経験</span></a></li>
+                        <li><a href="skill.html">Story<span>保有資格</span></a></li>
                         <li><a href="life.html">Future<span>人生設計</span></a></li>
                     </ul>
                 </nav>
@@ -235,6 +236,7 @@
                     <ul>
                         <li><a href="profile.html">プロフィール</a></li>
                         <li><a href="experience.html">今までの経験</a></li>
+                        <li><a href="skill.html">保有資格</a></li>
                         <li><a href="life.html">人生設計</a></li>
                     </ul>
                 </div>
