--- a/life.html
+++ b/life.html
@@ -42,5 +42,19 @@
         <div class="life-main">
             <img src="img/名称未設定-1.png">
         </div>
+        <footer id="footer" style="padding-top: 90px;" class="fadeIn">
+            <div class="footer-img">
+                <img src="img/footer-image.png" style="width: 120%; height: 400px">
+                <a href="contact.html" class="contact-button">お問い合わせはこちら</a>
+                <div class="nav-p">
+                    <ul>
+                        <li><a href="profile.html">プロフィール</a></li>
+                        <li><a href="experience.html">今までの経験</a></li>
+                        <li><a href="skill.html">保有資格</a></li>
+                        <li><a href="life.html">人生設計</a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
