--- a/profile.html
+++ b/profile.html
@@ -44,7 +44,7 @@
         </header>
         <div class="profile-main">
             <img src="img/Designer.png" alt="私のアクスタ" class="acrylic stand main-left">
-                <div class="main-right">
+                <div class="main-right" style="background-color: #ffe2e7; border-radius: 30px; width: 600px; height: 300px;">
                     <table>
                     <!-- <h1 class="page-title">Company</h1> -->
                     <tr>
@@ -59,20 +59,20 @@
                         <td>三重県津市</td>
                     </tr>
                     <tr>
-                        <th>やりたいこと</th>
-                        <td>アプリ開発</td>
+                        <th>MBTI</th>
+                        <td>ENFJ(主人公)</td>
                     </tr>
                 </table>
                 </div>
             </div>
             <div id="top" class="wrapper">
-                <ul class="product-list fadeIn">
+                <ul class="product-list fadeIn"">
                     <li data-title="自分の長所" 
                         data-text="周りを巻き込む力です。特にリーダーを務めているときに発揮されます。
                                 自分の行動力と一人一人にそった話方を武器に自信が掲げた目標を実現してきました。" 
                         data-img="img/4_Tyousyo.jpg"> <a href="#">
                         <div class="item4">
-                            <p>自分の長所</p>
+                            <p style="color: #ffc0cb;">自分の長所</p>
                         </div>
                         </a>
                     </li>
@@ -81,7 +81,7 @@
                                     ITの業界で同じ位置にとどまるためには、全力で走らなくては、位置を守る事はできないと感じるからです。" 
                         data-img="img/4_Tyousyo.jpg"> <a href="#">
                         <div class="item4">
-                            <p>好きな言葉</p>
+                            <p style="color: #ffc0cb;">好きな言葉</p>
                         </div>
                         </a>
                     </li>
@@ -89,7 +89,7 @@
                         data-text="私は、「挑戦できる環境、スキルアップが望める環境で仕事ができる」かを就活の軸としています。" 
                         data-img="img/4_Tyousyo.jpg"> <a href="#">
                         <div class="item4">
-                            <p>就活の軸</p>
+                            <p style="color: #ffc0cb;">就活の軸</p>
                         </div>
                         </a>
                     </li>
@@ -98,7 +98,7 @@
                                     見る事のない景色を見たいと思うからです。" 
                         data-img="img/5_Sky.jpeg"> <a href="#">
                             <div class="item5">
-                                <p>してみたいこと</p>
+                                <p style="color: #ffc0cb;">してみたいこと</p>
                             </div>
                         </a>
                     </li>
@@ -122,5 +122,19 @@
                         </div>
                     </div>
                 </div>
+                <footer id="footer" style="padding-top: 90px;" class="fadeIn">
+            <div class="footer-img">
+                <img src="img/footer-image.png" style="width: 120%; height: 400px">
+                <a href="contact.html" class="contact-button">お問い合わせはこちら</a>
+                <div class="nav-p">
+                    <ul>
+                        <li><a href="profile.html">プロフィール</a></li>
+                        <li><a href="experience.html">今までの経験</a></li>
+                        <li><a href="skill.html">保有資格</a></li>
+                        <li><a href="life.html">人生設計</a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
         </body>
 </html>
