--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,7 @@
                     <ul>
                         <li><a href="index.html">TOP<span>TOPページへ</span></a></li>
                         <li><a href="profile.html">Profile<span>プロフィール</span></a></li>
+                        <li><a href="skill.html">Story<span>保有資格</span></a></li>
                         <li><a href="experience.html">Story<span>今までの経験</span></a></li>
                     </ul>
                 </nav>
